plugins {
    id 'application'
    id("org.openjfx.javafxplugin") version "0.0.11"
}

application {
    mainClass = 'client.Main'
}

javafx {
    version = "21.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

java {
	sourceCompatibility = '21'
	targetCompatibility = '21'
}


dependencies {
	implementation project(":commons")
	
	implementation group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '3.0.3'
	implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.3'
	implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.3'

	implementation group: 'com.gluonhq', name: 'charm-glisten', version: '6.2.1'
	implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.0.1'
	implementation 'com.google.inject:guice:5.0.1'
	implementation("com.google.guava:guava:33.1.0-jre")




	implementation 'org.openjfx:javafx-controls:17.0.2'
	implementation 'org.openjfx:javafx-fxml:17.0.2'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.0.1'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.16.1'
	implementation 'com.google.code.gson:gson:2.10.1'

	implementation 'com.moandjiezana.toml:toml4j:0.7.2'
}

repositories {
	mavenCentral()
	maven {
		url "https://nexus.gluonhq.com/nexus/content/repositories/releases/"
	}
}